[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.9.4",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "pylint>=4.0.6",
    "python-dotenv>=1.2.2",
    "radon>=6.0.1",
    "ragas>=0.4.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
